@@ -11,6 +11,8 @@ postgresql-common (136) UNRELEASED; urgency=low
   * t/030_errors.t: For the "fails on insufficient disk space test", move from
     setting up a loop device to a tmpfs in unshare -m. This is more robust for
     cleaning up after itself, and faster as well.
+  * pg_ctlcluster: Fix log output to stderr if the log file started out being
+    empty. Add test case to t/030_errors.t.
 
   [ Christoph Berg ]
   * pg_buildext: Fix supported-versions not to die when the last version is
